Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <h1>¡Hola! Soy Jorge Pina</h1>
     <p>Si llegaste hasta aquí, es porque estás al pendiente de mis estados.</p>
-    <p>He creado este pequeño vlog o página para dar a conocer que actualmente estoy buscando empleo, </p>
+    <p>He creado este pequeño blog o página para dar a conocer que actualmente estoy buscando empleo, </p>
     <p>preferiblemente en el área de Valencia Norte ya que en este momento no cuento con vehículo 
         o medio de transporte.</p>
     <p>¡Gracias por tu tiempo!</p>
